--- a/src/style/Fridge.css
+++ b/src/style/Fridge.css
@@ -17,7 +17,6 @@
   text-align: center;      /* 내부 텍스트 중앙 정렬 */
 }
 
-/* 3. 제목 */
 .AddListB h1 {
   color: #3e2723;         
   font-family: 'NexonFootballGothic', sans-serif;
@@ -25,14 +24,17 @@
   margin-bottom: 20px;
   margin-top:-10px;
   font-size: 3rem;
+  color: #3e2723;         
 }
 
-/* 4. 카테고리 선택 (체크박스 영역) */
+
 .AddListS {
   display: flex;
   justify-content: center;
   gap: 20px;
   margin-bottom: 30px;
+  color: #3e2723;         
+  font-family: 'NexonFootballGothic', sans-serif;
 }
 
 .category-choice {
@@ -96,4 +98,37 @@
 
 .btn-submit:active {
   transform: translateY(0);
+}
+
+.fridge-container{
+  display: flex;
+  justify-content: center; 
+  align-items: center;     
+  min-height: 100vh;       
+  background-color: #fff8e1; 
+  box-sizing: border-box;
+}
+
+.ingredientListB h1{
+  color: #3e2723;         
+  font-family: 'NexonFootballGothic', sans-serif;
+  font-weight: 1000;
+  margin-bottom: 20px;
+  margin-top:-10px;
+  font-size: 3rem;
+}
+
+.ingredientListS{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 30px;
+  color: #3e2723;         
+  font-family: 'NexonFootballGothic', sans-serif;
+}
+
+.LoadingList{
+  color: #3e2723;         
+  font-family: 'NexonFootballGothic', sans-serif;
+  justify-content: center;
 }
