--- a/src/style/Fridge.css
+++ b/src/style/Fridge.css
@@ -10,25 +10,26 @@
 .AddListB {
   /* background-color: white; */
   width: 100%;
-  max-width: 500px;        /* 너무 퍼지지 않게 제한 */
+  max-width: 500px;       
   padding: 40px;
-  border-radius: 30px;     /* 부드러운 곡선 */
+  border-radius: 30px;     
   /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); */
-  text-align: center;      /* 내부 텍스트 중앙 정렬 */
+  text-align: center;    
 }
 
 .AddListB h1 {
   color: #3e2723;         
   font-family: 'NexonFootballGothic', sans-serif;
   font-weight: 1000;
-  margin-bottom: 20px;
-  margin-top:-10px;
-  font-size: 3rem;
-  color: #3e2723;         
+  margin-bottom: 0px;
+  margin-top:-20px;
+  font-size: 3rem;    
+  
 }
 
 
 .AddListS {
+  
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -52,12 +53,18 @@
 .added-item {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   text-align: left;
+  width:100%;
 }
 
 .added-item label {
-  width: 80px;           
+  width: auto;
+  min-width:140px;
+  white-space:nowrap;
+  font-size:1.8rem;
+  font-family:'NexonFootballGothic',san-serif;
+  margin-right:15px;           
   font-weight: 700;
   color: #3e2723;
 }
@@ -77,18 +84,33 @@
 
 
 .btn-submit {
-  width: 100%;
   padding: 15px;
-  margin-top: 20px;
   background-color: #e67e22;
   color: white;
   border: none;
   border-radius: 20px;   
   font-family: 'NexonFootballGothic', sans-serif;
   font-weight: 800;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   cursor: pointer;
   transition: transform 0.2s, background-color 0.2s;
+  flex:1;
+  margin-top:30px;
+}
+
+.btn-submit2 {
+  padding: 15px;
+  background-color: #e67e22;
+  color: white;
+  border: none;
+  border-radius: 20px;   
+  font-family: 'NexonFootballGothic', sans-serif;
+  font-weight: 800;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: transform 0.2s, background-color 0.2s;
+  width:100%;
+  margin-top:30px;
 }
 
 .btn-submit:hover {
@@ -100,13 +122,38 @@
   transform: translateY(0);
 }
 
+.btn-delete {
+  font-family: 'NexonFootballGothic', sans-serif;
+  flex:1;
+  font-weight: 800;
+  font-size: 1.2rem;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: transform 0.2s, opacity 0.2s;
+  margin-top:30px;
+}
+
+.btn-delete:hover {
+  opacity: 0.8;
+}
+
+.btn-delete {
+  flex: 1;
+  padding: 15px;
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+}
+
+
 .fridge-container{
   display: flex;
-  justify-content: center; 
-  align-items: center;     
-  min-height: 100vh;       
+  width:100%;
+  min-height:100vh;
+  flex-direction: column; 
+  align-items: center;          
   background-color: #fff8e1; 
-  box-sizing: border-box;
+  box-sizing:border-box;
 }
 
 .ingredientListB h1{
@@ -119,16 +166,111 @@
 }
 
 .ingredientListS{
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 30px;
+  margin-top: 230px;
   color: #3e2723;         
   font-family: 'NexonFootballGothic', sans-serif;
+  font-size:2rem;
+  font-weight:700;
+  width:100%;
+  max-width:1000px;
+  padding: 0 20px 50px 20px;
 }
 
 .LoadingList{
   color: #3e2723;         
   font-family: 'NexonFootballGothic', sans-serif;
   justify-content: center;
+  font-size:2rem;
+  font-weight: 700;
 }
+
+
+.fridge-container h1 {
+  position: sticky; 
+  top: 0;
+  padding: 20px 0;
+  margin: 0;
+  z-index: 10;
+  text-align: center;
+}
+
+
+.ingredient-list {
+  list-style: none; 
+  padding: 0;
+  margin: 0;
+}
+
+
+.ingredient-item {
+  border-bottom: 3px solid #3e2723; /*밑줄*/
+  padding: 20px 0 10px 0;
+  width:500px;
+  box-sizing: border-box;
+
+}
+
+
+.info {
+  display: flex; /* 가로 정렬 모드 */
+  justify-content: space-between; /* 자식들끼리 양끝으로 밀어내기 */
+  align-items: center; /* 세로 중앙 정렬 */
+  width: 100%; /* 부모 너비 꽉 채우기 */
+  max-width: 800px; /* 원하는 최대 너비 지정 */
+  margin: 0 auto; /* 중앙 정렬 */
+}
+
+/* 5. 왼쪽 그룹(이름, 수량) 정렬 */
+.left-group {
+  display: flex;
+  gap: 20px; /* 이름과 수량 사이의 간격 */
+  font-size: 2rem;
+  padding: 0px 50px 0px 0px;
+}
+
+/* 6. 유통기한 스타일 */
+.expiry {
+  color: #3e2723cf;
+  font-size: 2rem;
+}
+
+.fridge-header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff8e1;
+  z-index:0;
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  padding: 40px 0 0px 0;
+}
+
+
+.category-select {
+  flex: 1;
+  padding: 12px 15px;
+  border: 2px solid #f0f0f0;
+  border-radius: 10px;
+  outline: none;
+  font-family: 'NexonFootballGothic', sans-serif;
+  font-size: 1.2rem;
+  color: #3e2723;
+  cursor: pointer;
+}
+
+hr {
+  border: 0;
+  border-top: 3px solid #3e2723; 
+  margin: 30px -40px;             
+  width: calc(100% + 80px);    
+
+}
+
+.button-container {
+  display: flex;
+  gap: 15px;
+  margin-top: 20px;
+}
+
