--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,3 +1,6 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+
 .side-nav.left {
   position: fixed;      /* 화면 왼쪽에 고정 */
   left: 0;           /* 왼쪽 벽에서 살짝 띄움 */
@@ -12,10 +15,10 @@
   align-items: center;
   padding: 50px 0px;            
   
-  background-color: #fff8e1;
+  background-color: #FAF9F6;
 
 
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 15px rgba(62, 39, 35, 0.05);
   z-index: 100;    
   box-sizing: border-box;     
 }
@@ -34,10 +37,10 @@
   align-items: center;
   padding: 50px 0px;            
   
-  background-color: #fff8e1;
+  background-color: #FAF9F6;
 
 
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 15px rgba(62, 39, 35, 0.05);
   z-index: 100;    
   box-sizing: border-box;        
 }
@@ -47,11 +50,14 @@
   width: 100px;          
   height: 100px;        
   border-radius: 25px;  
-  border: 3px solid #3e2723;
-  background-color: #757575;
+  border: 1px solid #EBE8E0;
+  background-color: #F0EDE5;
   font-size: 2.5rem;  
   /* text-shadow: 0 0 10px  #ffffff; */
-  text-shadow: -2px 0 #3e2723, 0 2px #3e2723, 2px 0 #3e2723, 0 -2px #3e2723;
+  text-shadow: -2px 0 rgba(62, 39, 35, 0.05), 
+  0 2px rgba(62, 39, 35, 0.05), 
+  2px 0 rgba(62, 39, 35, 0.05), 
+  0 -2px rgba(62, 39, 35, 0.05);
   z-index:1;
   cursor: pointer;
   display: flex;
@@ -71,13 +77,13 @@
 
 /* 활성화된 버튼 스타일 (activeMenu와 일치할 때) */
 .nav-btn.active {
-  background-color: #ea572a; /* 주황색 포인트 */
-  box-shadow: 0 4px 10px rgba(230, 126, 34, 0.4);
+  background-color: #8D6E63;
+  box-shadow: 0 4px 12px rgba(62, 39, 35, 0.05);
 }
 
 /* 활성화된 버튼의 아이콘 색상 (이모지는 해당 안 되지만 텍스트일 경우 대비) */
 .nav-btn.active {
-  filter: drop-shadow(0 0 2px rgba(0,0,0,0.1));
+  filter: drop-shadow(0 4px 12px rgba(62, 39, 35, 0.05));
 }
 
 /* (선택 사항) 버튼 옆에 툴팁처럼 이름을 띄우고 싶다면? */
